2004-09-28  Not Zed  <NotZed@Ximian.com>

	* camel-imapp-engine.c (camel_imapp_engine_command_free): assume
	the command isn't in a list now.
	(cie_worker): worker thread code.

	* camel-imapp-engine.h: make the imappcommand a
	message.

2004-09-28  Not Zed  <NotZed@Ximian.com>

	* added new changelog.
