@@ -1,3 +1,8 @@
+2004-09-30  Not Zed  <NotZed@Ximian.com>
+
+	* camel-imapp-engine.c: make the build again, warnings, doesn't
+	work.
+
 2004-09-28  Not Zed  <NotZed@Ximian.com>
 
 	* camel-imapp-engine.c (camel_imapp_engine_command_free): assume
